--- a/style.css
+++ b/style.css
@@ -2,28 +2,24 @@ h1 {
   padding-bottom: 50px;
 }
 button img {
-  width: 50px;
   position: absolute;
   bottom: 0;
   right: 0;
+  width: 50px;
   border-radius: 3px;
   transition: all 0.3s;
   z-index: 1;
 }
 button {
-  /* display: flex; */
-  /* align-items: center; */
-  /* justify-content: flex-start; */
-  min-height: 50px;
   position: relative;
-  z-index: 1;
+  min-height: 50px;
   overflow: visible;
+  z-index: 1;
 }
 button:hover img {
   width: 100px;
-  /* bottom: -50%; */
-  z-index: 10;
   border-radius: 50% 5px 50% 50%;
+  z-index: 10;
 }
 .list-group {
   max-width: 700px;
@@ -32,16 +28,14 @@ button:hover img {
 .list-group ul {
   max-width: 600px;
 }
-#bla {
+#details {
   margin: auto;
   max-width: 700px;
 }
-.ingredients {
-}
 
-.info img {
+.details-img {
   width: 300px;
 }
-.ingredients img {
+.ingredient-img {
   width: 50px;
 }
